--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
 
 body {
   margin: 0;
-  font-family: 'VT323', monospace;
+  font-family: 'Rubik', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
