--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -48,28 +48,29 @@ code {
 
 @media (min-width: 320px) and (max-width: 425px) {
   .contentSection {
+    margin-top: 100px;
     margin-right: 0;
-    margin-left: 0;
+    margin-left: 0
   }
 }
 
 @media (min-width: 425px) and (max-width: 768px) {
   .contentSection {
     margin-right: 20px;
-    margin-left: 20px;
+    margin-left: 20px
   }
 }
 
 @media (min-width: 768px) and (max-width: 1280px) {
   .contentSection {
     margin-right: 40px;
-    margin-left: 40px;
+    margin-left: 40px
   }
 }
 
 @media (min-width: 1280px) and (max-width: 7680px) {
   .contentSection {
     margin-right: 15%;
-    margin-left: 15%;
+    margin-left: 15%
   }
 }
